--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>CentralAMS</title>
-  <base href="https://ken2ie.github.io/centralAMS/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!-- BoxIcon Integration link -->
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-  <style>@import"https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap";*{margin:0;padding:0;box-sizing:border-box;font-family:Poppins,sans-serif}body{margin:0;padding:0;box-sizing:border-box}</style>
 
-<style>*{margin:0;padding:0;box-sizing:border-box;font-family:Poppins}body{margin:0;padding:0;box-sizing:border-box;display:flex;flex-direction:column;justify-content:center;overflow-x:hidden}</style><link rel="stylesheet" href="styles.82e095be1d771e16.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.82e095be1d771e16.css"></noscript></head>
+<style>html{scroll-behavior:smooth}*{margin:0;padding:0;box-sizing:border-box;font-family:Poppins}body{margin:0;padding:0;box-sizing:border-box;display:flex;flex-direction:column;justify-content:center;overflow-x:hidden}</style><link rel="stylesheet" href="styles.c16abc5e03a6dacf.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.c16abc5e03a6dacf.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="https://ken2ie.github.io/centralAMS/runtime.1a0cd08598bda8e7.js" type="module"></script><script src="https://ken2ie.github.io/centralAMS/polyfills.bbd7a663ecd951b6.js" type="module"></script><script src="https://ken2ie.github.io/centralAMS/main.9210b8c31096bee3.js" type="module"></script>
+<script src="runtime.1a0cd08598bda8e7.js" type="module"></script><script src="polyfills.bbd7a663ecd951b6.js" type="module"></script><script src="main.b9979aae61245591.js" type="module"></script>
 
 </body></html>
