--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>CentralAMS</title>
-  <base href="https://ken2ie.github.io/centralAMS/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/cu-logo.png">
 
   <!-- BoxIcon Integration link -->
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
@@ -11,6 +11,6 @@
 <style>html{scroll-behavior:smooth}*{margin:0;padding:0;box-sizing:border-box;font-family:Poppins}body{margin:0;padding:0;box-sizing:border-box;display:flex;flex-direction:column;justify-content:center;overflow-x:hidden}</style><link rel="stylesheet" href="styles.c16abc5e03a6dacf.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.c16abc5e03a6dacf.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="https://ken2ie.github.io/centralAMS/runtime.1a0cd08598bda8e7.js" type="module"></script><script src="https://ken2ie.github.io/centralAMS/polyfills.bbd7a663ecd951b6.js" type="module"></script><script src="https://ken2ie.github.io/centralAMS/main.b9979aae61245591.js" type="module"></script>
+<script src="runtime.1a0cd08598bda8e7.js" type="module"></script><script src="polyfills.bbd7a663ecd951b6.js" type="module"></script><script src="main.769c27f17de8f1d4.js" type="module"></script>
 
 </body></html>
