--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>CentralAMS</title>
-  <base href="/">
+  <base href="https://ken2ie.github.io/centralAMS/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/cu-logo.png">
 
@@ -11,6 +11,6 @@
 <style>html{scroll-behavior:smooth}*{margin:0;padding:0;box-sizing:border-box;font-family:Poppins}body{margin:0;padding:0;box-sizing:border-box;display:flex;flex-direction:column;justify-content:center;overflow-x:hidden}</style><link rel="stylesheet" href="styles.c16abc5e03a6dacf.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.c16abc5e03a6dacf.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.1a0cd08598bda8e7.js" type="module"></script><script src="polyfills.bbd7a663ecd951b6.js" type="module"></script><script src="main.b0be19930257a6f6.js" type="module"></script>
+<script src="https://ken2ie.github.io/centralAMS/runtime.1a0cd08598bda8e7.js" type="module"></script><script src="https://ken2ie.github.io/centralAMS/polyfills.bbd7a663ecd951b6.js" type="module"></script><script src="https://ken2ie.github.io/centralAMS/main.b0be19930257a6f6.js" type="module"></script>
 
 </body></html>
