--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- BoxIcon Integration link -->
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-
+<style>@import"https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap";*{margin:0;padding:0;box-sizing:border-box;font-family:Poppins,sans-serif}body{margin:0;padding:0;box-sizing:border-box}</style><link rel="stylesheet" href="styles.5161d370c3ba8e98.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.5161d370c3ba8e98.css"></noscript></head>
 <style>html{scroll-behavior:smooth}*{margin:0;padding:0;box-sizing:border-box;font-family:Poppins}body{margin:0;padding:0;box-sizing:border-box;display:flex;flex-direction:column;justify-content:center;overflow-x:hidden}</style><link rel="stylesheet" href="styles.c16abc5e03a6dacf.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.c16abc5e03a6dacf.css"></noscript></head>
 <body>
   <app-root></app-root>
